get term, editfarm api
