# routes/api.php
@@ -65,6 +65,9 @@ Route::get('sample','SampleController@index');
 Route::group(['middleware' => 'auth:api'], function(){
     Route::post('farm','API\FarmController@register');
     Route::get('farm', 'API\FarmController@fetch_by_ahli');
+    Route::post('term', 'API\FarmController@postTerm');
+    Route::get('term/{id_pemilik_lahan}', 'API\FarmController@getTerms');
+    Route::put('farm/{id_farm}','API\FarmController@editFarm');
 
     Route::post('groupfarm','API\FarmController@postgroupfarm');
     Route::get('groupfarm/{id}','API\FarmController@getGroupfarm');
