# storage/api-docs/api-docs.json
@@ -76,6 +76,149 @@
                 ]
             }
         },
+        "/term": {
+            "post": {
+                "tags": [
+                    "Term"
+                ],
+                "summary": "add new Term (Time periodic)",
+                "operationId": "addNewTerm",
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "description": "you need login first before using this api",
+                        "required": true,
+                        "schema": {
+                            "properties": {
+                                "name": {
+                                    "type": "string"
+                                },
+                                "id_pemilik_lahan": {
+                                    "type": "integer"
+                                },
+                                "start_date": {
+                                    "type": "string"
+                                },
+                                "end_date": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful"
+                    }
+                },
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ]
+            }
+        },
+        "/term/{id_pemilik_lahan}": {
+            "get": {
+                "tags": [
+                    "Term"
+                ],
+                "summary": "get list term",
+                "operationId": "getTerms",
+                "parameters": [
+                    {
+                        "name": "id_pemilik_lahan",
+                        "in": "path",
+                        "description": "you need login first before using this api",
+                        "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful"
+                    },
+                    "401": {
+                        "description": "unauthenticated"
+                    }
+                },
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ]
+            }
+        },
+        "/farm/{id_farm}": {
+            "put": {
+                "tags": [
+                    "farm"
+                ],
+                "summary": "edit profile farm",
+                "operationId": "editProfilFarm",
+                "parameters": [
+                    {
+                        "name": "id_farm",
+                        "in": "path",
+                        "description": "farm id",
+                        "type": "integer"
+                    },
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "description": "Login first before using this api",
+                        "required": true,
+                        "schema": {
+                            "properties": {
+                                "jumlah_pohon": {
+                                    "type": "string"
+                                },
+                                "varietas": {
+                                    "type": "string"
+                                },
+                                "siklus_pertumbuhan": {
+                                    "type": "string"
+                                },
+                                "panen_pertama": {
+                                    "type": "string"
+                                },
+                                "panen_terakhir": {
+                                    "type": "string"
+                                },
+                                "jumlah_produksi_pertahun": {
+                                    "type": "string"
+                                },
+                                "latitude_longtitude_1": {
+                                    "type": "string"
+                                },
+                                "latitude_longtitude_2": {
+                                    "type": "string"
+                                },
+                                "latitude_longtitude_3": {
+                                    "type": "string"
+                                },
+                                "latitude_longtitude_4": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "401": {
+                        "description": "unauthorized"
+                    }
+                },
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ]
+            }
+        },
         "/login": {
             "post": {
                 "tags": [
